Fixes (#319)
* case insensitive

* fix scrolling

* fix sorting

* fix truncate

* tokenized search

* rm bold

--- a/physionet-django/static/custom/css/physionet.css
+++ b/physionet-django/static/custom/css/physionet.css
@@ -1,6 +1,4 @@
 html,body{height:100%; width: 100%;}
-html{overflow: hidden;}
-body{overflow: scroll;}
 
 /* Open in new window icon */
 a[target='_blank']::after {
